# bi-widget-rust-cli

./: .env  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  tui.rs  types.rs  ui.rs
