[package]
name = "bi-widget-rust-cli"
version = "0.1.0"
edition = "2021"
publish = false
exclude = ["assets"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.26.1"
ratatui = { version = "0.21.0" }
serde = { version = "1.0.167", features = ["derive"] }
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json", "gzip", "deflate"] }
futures = "0.3.28"
serde_json = "1.0.100"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.4.0"
dotenv = "0.15.0"
